# memory

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
.claude/decisions/: 2026-05-10-four-entry-types-no-schema-registry.md  2026-05-10-provider-interface-mcp-compatible.md  2026-05-10-two-providers-in-v0.md
.claude/plans/: 2026-05-10-memory-v0.md
hooks/: hooks.json  session-record.sh  session-start.sh
lib/: cli.py  config.py  index.py  lock.py  memory_reader.py  memory_writer.py  server.py  session_notes.py  session_recorder.py  transcript.py
lib/providers/: base.py  filesystem.py  vault.py
scripts/: check-memory-path-usage.sh  migrate-auto-memory.sh  relocate-smoke-entry.sh
templates/: session-record.md
tests/: conftest.py  test_check_memory_path_usage.py  test_cli.py  test_cli_brief.py  test_cli_record.py  test_cli_resolve_scope.py  test_filesystem_provider.py  test_index.py  test_lock.py  test_memory_reader.py  test_memory_reader_brief.py  test_memory_reader_resolve_scope.py  test_memory_writer.py  test_migrate_auto_memory.py  test_provider_abc.py  test_providers.py  test_server.py  test_session_notes.py  test_session_recorder.py  test_session_start_hook.py  test_transcript.py  test_vault_provider_brief.py  test_vault_provider_placement.py  test_vault_provider_resolve_scope.py
tests/fixtures/: cc_session_sample.jsonl
tests/fixtures/auto_memory_sample/-home-fearsidhe--claude-plugins-memory/memory/: MEMORY.md  feedback_memories_close_to_entity.md  project_memory_plugin_vault_is_store.md  reference_some_other.md
